[package]
name = "tiny-cloud"
authors = [ "hex0x0000 <hex0x0000@protonmail.com>" ]
description = "Fast, lightweight, self-hosted, KISS (Keep It Simple, Stupid) personal cloud"
repository = "https://github.com/personal-tiny-cloud/tiny-cloud"
license = "GPL-3.0"
version = "0.0.2"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = [ "sync", "fs", "parking_lot" ] }
actix-web = { version = "4", features = [ "secure-cookies" ] }
actix-session = { version = "0.9", features = [ "cookie-session" ] } # 0.10 does not work for some reason, waiting for updates
actix-identity = "0.7"
actix-multipart = { version = "0.7", features = [ "tempfile" ] }
sql_minifier = "0.1.5"
maud = "0.26"
serde = { version = "1.0", features = [ "derive" ] }
num_cpus = "1"
thiserror = "1"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.6", features = [ "zeroize_derive" ] }
rpassword = "7"
async-sqlite = { version = "0.3", default-features = false }
mutually_exclusive_features = "0.1"

# Common library
tcloud-library = { git = "https://github.com/personal-tiny-cloud/tcloud-library", tag = "0.0.2" }

# Logging
log = "0.4"
tiny-logs = { git = "https://github.com/personal-tiny-cloud/tiny-logs", tag = "0.0.2", optional = true }
syslog = { version = "7", optional = true }
systemd-journal-logger = { version = "2", optional = true }

# TLS
openssl = { version = "0.10", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Authentication
totp-rs = { version = "5.5", features = [ "qr", "otpauth" ], optional = true }

# Plugins
tcloud-archive = { git = "https://github.com/personal-tiny-cloud/tcloud-archive", tag = "0.0.2", optional = true }

[features]
default = [ "default-log", "totp-auth", "openssl", "archive" ]

# Logging
default-log = [ "dep:tiny-logs" ]
syslog = [ "dep:syslog" ]
systemd-log = [ "dep:systemd-journal-logger" ]

# TLS
no-tls = []
openssl = [ "dep:openssl", "actix-web/openssl" ]
rustls = [ "dep:rustls-pemfile", "dep:rustls", "actix-web/rustls-0_23" ]

# Database
sqlite-bundled = [ "async-sqlite/bundled" ]

# Authentication
totp-auth = [ "dep:totp-rs" ]

# Plugins
archive = [ "dep:tcloud-archive" ]

[build-dependencies]
tcloud-assets-include = { git = "https://github.com/personal-tiny-cloud/tcloud-assets-include", tag = "0.0.1" }

