[package]
name = "tiny-cloud"
authors = [ "hex0x0000 <hex0x0000@protonmail.com>" ]
description = "Fast, lightweight, self-hosted, KISS (Keep It Simple, Stupid) personal cloud"
repository = "https://github.com/personal-tiny-cloud/tiny-cloud"
license = "AGPL-3.0-or-later"
version = "0.0.1"
edition = "2024"

[features]
default = [ "openssl" ]

# Logging
syslog = [ "tiny-logs/syslog" ]

# TLS
no-tls = []
openssl = [ "dep:openssl", "actix-web/openssl" ]
rustls = [ "dep:rustls-pemfile", "dep:rustls", "actix-web/rustls-0_23" ]

# Database
sqlite-bundled = [ "async-sqlite/bundled" ]

[dependencies]
tokio = { version = "1.29", features = [ "sync", "fs", "process" ] }
actix-web = { version = "4", features = [ "secure-cookies" ] }
actix-session = { version = "0.11", features = [ "cookie-session" ] }
actix-identity = "0.9"
actix-multipart = { version = "0.7", features = [ "tempfile" ] }
maud = "0.27"
serde = { version = "1.0", features = [ "derive" ] }
num_cpus = "1"
thiserror = "2"
argon2 = "0.5"
rand = "0.9"
zeroize = { version = "1.6", features = [ "zeroize_derive" ] }
rpassword = "7"
async-sqlite = { version = "0.5", default-features = false }
mutually_exclusive_features = "0.1"

# Common library
common-library = { path = "libs/common-library" }

# Logging
log = { version = "0.4", features = [ "release_max_level_info" ] }
tiny-logs = { path = "libs/tiny-logs" }

# TLS
openssl = { version = "0.10", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Authentication
totp-rs = { version = "5.5", features = [ "qr", "otpauth" ] }

# Plugins
archive = { path = "libs/archive", optional = true }

[build-dependencies]
assets-include = { path = "libs/assets-include" }

# Speeds up password checking time
[profile.dev.package.argon2]
opt-level = 3

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "forbid"
