[package]
name = "archive"
description = "Archive for Tiny Cloud"
authors = [ "hex0x0000 <hex0x0000@protonmail.com>" ]
repository = "https://github.com/personal-tiny-cloud/tcloud-archive"
version = "0.0.2"
license = "AGPL-3.0-or-later"
edition = "2024"

[dependencies]
common-library = { path = "../common-library" }
tokio = { version = "1", features = [ "rt", "macros" ] }

