[package]
name = "assets-include"
authors = [ "hex0x0000 <hex0x0000@protonmail.com>" ]
description = "Minifies and includes assets into the binary during the building process for Tiny Cloud."
license = "GPL-3.0"
version = "0.0.1"
repository = "https://github.com/personal-tiny-cloud/tcloud-assets-include"
edition = "2024"

[dependencies]
#wwwfmt = { git = "https://github.com/hex0x0000/wwwfmt" }
wwwfmt = { path = "/home/vale/Programmi/wwwfmt" }

[dev-dependencies]
tempfile = "3.14"
